BJS2-26074 premium